tests/seccomp/gatekeeper.yaml
../../submodules/gatekeeper-library/library/pod-security-policy/seccomp/samples/psp-seccomp/constraint.yaml
